--- a/src/components/TitleCards/TitleCards.css
+++ b/src/components/TitleCards/TitleCards.css
@@ -34,3 +34,31 @@
     text-decoration: none;
     color: white;
 }
+
+@media (max-width: 800px) {
+    .titleCards {
+        margin-top: 20px;
+        margin-bottom: 0;
+    }
+    .titleCards h2 {
+        font-size: 20px;
+    }
+    .cardList img {
+        width: 200px;
+    }
+    .cardList p {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 500px) {
+    .titleCards h2 {
+        font-size: 15px;
+    }
+    .cardList img {
+        width: 165px;
+    }
+    .cardList p {
+        font-size: 10px;
+    }
+}
