--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -83,3 +83,36 @@
 .navDark {
     background: #141414;
 }
+
+.spinner {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.spinner img {
+    width: 60px;
+}
+
+@media (max-width: 800px) {
+    .nav {
+        padding: 20px 4%;
+    }
+    .nav-left ul {
+        display: none;
+    }
+    .nav img {
+        height: 25px;
+    }
+}
+
+@media (max-width: 500px) {
+    .nav img {
+        height: 20px;
+    }
+    .nav-right {
+        gap: 10px;
+    }
+}
